[gd_scene load_steps=12 format=3 uid="uid://cqsodpswgup8w"]

[ext_resource type="Script" uid="uid://bw7i702t87j4y" path="res://main.gd" id="1_lquwl"]
[ext_resource type="PackedScene" uid="uid://cqs8c3rq6cxvk" path="res://addons/common/viewport_2d_in_3d/function_pointer.tscn" id="2_lquwl"]
[ext_resource type="PackedScene" uid="uid://dcwibwtseri8h" path="res://addons/common/viewport_2d_in_3d/viewport_2d_in_3d.tscn" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://cumaj3uho5mg1" path="res://eye_menu.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://cay8oh2ll7yxi" path="res://assets/test_kun/Test-Kun.fbx" id="4_b317s"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_0x6cv"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_dqyx0"]
sky_material = SubResource("ProceduralSkyMaterial_0x6cv")

[sub_resource type="Environment" id="Environment_m0xew"]
background_mode = 2
background_color = Color(0, 0, 0, 0)
sky = SubResource("Sky_dqyx0")
ambient_light_source = 2
ambient_light_color = Color(0.270588, 0.270588, 0.270588, 1)
tonemap_mode = 2

[sub_resource type="SphereMesh" id="SphereMesh_5gcab"]
radius = 0.025
height = 0.05

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k604q"]

[sub_resource type="PlaneMesh" id="PlaneMesh_mjcgt"]
material = SubResource("StandardMaterial3D_k604q")
size = Vector2(10, 10)

[node name="Main" type="Node3D"]
script = ExtResource("1_lquwl")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_m0xew")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.677077, -0.692092, 0.25015, 0.264251, 0.545897, 0.79509, -0.686831, -0.472235, 0.552501, 0, 0, 0)

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.352791, 0)

[node name="EyeGaze" type="XRController3D" parent="XROrigin3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.977669, 0)
tracker = &"/user/eyes_ext"
show_when_tracked = true

[node name="EyeGazeMesh" type="MeshInstance3D" parent="XROrigin3D/EyeGaze"]
transform = Transform3D(1, 0, 0, 0, -0.0133513, 0.999911, 0, -0.999911, -0.0133513, 0, 0, -1.18886)
mesh = SubResource("SphereMesh_5gcab")

[node name="AndroidXRLeftEye" type="XRController3D" parent="XROrigin3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.977669, 0)
visible = false
tracker = &"/user/eye_tracker_android/left"

[node name="LeftEyeMesh" type="MeshInstance3D" parent="XROrigin3D/AndroidXRLeftEye"]
transform = Transform3D(1, 0, 0, 0, -0.0133513, 0.999911, 0, -0.999911, -0.0133513, 0, 0, -1.18886)
mesh = SubResource("SphereMesh_5gcab")

[node name="AndroidXRRightEye" type="XRController3D" parent="XROrigin3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.977669, 0)
visible = false
tracker = &"/user/eye_tracker_android/right"

[node name="RightEyeMesh" type="MeshInstance3D" parent="XROrigin3D/AndroidXRRightEye"]
transform = Transform3D(1, 0, 0, 0, -0.0133513, 0.999911, 0, -0.999911, -0.0133513, 0, 0, -1.18886)
mesh = SubResource("SphereMesh_5gcab")

[node name="LeftHandTracker" type="XRNode3D" parent="XROrigin3D"]
tracker = &"/user/hand_tracker/left"
show_when_tracked = true

[node name="LeftHandModel" type="OpenXRFbHandTrackingMesh" parent="XROrigin3D/LeftHandTracker"]

[node name="LeftXRHandModifier3D" type="XRHandModifier3D" parent="XROrigin3D/LeftHandTracker/LeftHandModel"]

[node name="RightHandTracker" type="XRNode3D" parent="XROrigin3D"]
tracker = &"/user/hand_tracker/right"
show_when_tracked = true

[node name="RightHandModel" type="OpenXRFbHandTrackingMesh" parent="XROrigin3D/RightHandTracker"]
hand = 1
bones/0/name = "RightPalm"
bones/1/name = "RightHand"
bones/2/name = "RightThumbMetacarpal"
bones/3/name = "RightThumbProximal"
bones/4/name = "RightThumbDistal"
bones/5/name = "RightThumbTip"
bones/6/name = "RightIndexMetacarpal"
bones/7/name = "RightIndexProximal"
bones/8/name = "RightIndexIntermediate"
bones/9/name = "RightIndexDistal"
bones/10/name = "RightIndexTip"
bones/11/name = "RightMiddleMetacarpal"
bones/12/name = "RightMiddleProximal"
bones/13/name = "RightMiddleIntermediate"
bones/14/name = "RightMiddleDistal"
bones/15/name = "RightMiddleTip"
bones/16/name = "RightRingMetacarpal"
bones/17/name = "RightRingProximal"
bones/18/name = "RightRingIntermediate"
bones/19/name = "RightRingDistal"
bones/20/name = "RightRingTip"
bones/21/name = "RightLittleMetacarpal"
bones/22/name = "RightLittleProximal"
bones/23/name = "RightLittleIntermediate"
bones/24/name = "RightLittleDistal"
bones/25/name = "RightLittleTip"

[node name="RightXRHandModifier3D" type="XRHandModifier3D" parent="XROrigin3D/RightHandTracker/RightHandModel"]
hand_tracker = &"/user/hand_tracker/right"

[node name="LeftController" type="XRController3D" parent="XROrigin3D"]
tracker = &"left_hand"

[node name="FunctionPointer" parent="XROrigin3D/LeftController" instance=ExtResource("2_lquwl")]

[node name="RightController" type="XRController3D" parent="XROrigin3D"]
tracker = &"right_hand"

[node name="FunctionPointer" parent="XROrigin3D/RightController" instance=ExtResource("2_lquwl")]

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0594058, 0)
mesh = SubResource("PlaneMesh_mjcgt")

[node name="AvatarOffset" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="Test-Kun" parent="AvatarOffset" instance=ExtResource("4_b317s")]

[node name="XRBodyModifier3D" type="XRBodyModifier3D" parent="AvatarOffset/Test-Kun/Armature/GeneralSkeleton" index="2"]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, -8.74228e-08, 0, -1)
bone_update = 1

[node name="XRFaceModifier3D" type="XRFaceModifier3D" parent="AvatarOffset"]
target = NodePath("../Test-Kun/Armature/GeneralSkeleton/Body")

[node name="Viewport2Din3D" parent="." instance=ExtResource("3_h2yge")]
unique_name_in_owner = true
transform = Transform3D(0.49999997, 0, 0.8660253, 0, 1, 0, -0.8660253, 0, 0.49999997, -1.0379996, 1.0181454, -0.49768138)
scene = ExtResource("4_1bvp3")
viewport_size = Vector2i(576, 324)
pixel_size = 0.002

[editable path="AvatarOffset/Test-Kun"]
